--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
-<html layout:decorator="fragments/template" xmlns:th="http://www.thymeleaf.org">
-<head>
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+	layout:decorator="fragments/template">
+<head lang="it">
 </head>
 <body>
-
 	<div layout:fragment="content">
 		<div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
-                        <div class="dashboard_graph">
-
-                            <div class="row x_title">
-                                <div class="col-md-6">
-                                    <h3>Home Page</h3>
-                                </div>
-                            </div>
-
-                            <div class="col-md-12 col-sm-12 col-xs-12">
-                            	<a th:href="@{/provider/edit}">Registra nuovo provider</a>
-                            </div>
-
-                            <div class="clearfix"></div>
-                        </div>
-                    </div>
-
-                </div>
-           <br />
+			<div class="col-xs-12">
+				<div class="x_panel">
+					<div class="x_title">
+						
+					</div>
+					<div class="x_content">
+						<table id="datatable-responsive"
+							class="table table-striped table-bordered dt-responsive nowrap"
+							cellspacing="0" width="100%">
+							<thead>
+								<tr>
+									<th>Denominazione legale</th>
+									<th>Codice / Partita IVA</th>
+									<th>Gruppo di appertenenza</th>
+								</tr>
+							</thead>
+							<tbody>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-
 </body>
 </html>
+	
