fix link denominazione legale providerList

--- a/src/main/resources/templates/provider/providerList.html
+++ b/src/main/resources/templates/provider/providerList.html
@@ -22,7 +22,7 @@
 							cellspacing="0" width="100%">
 							<thead>
 								<tr>
-									<th th:text="#{label.denominazione_legale}">Denominazione legale</th>
+									<th><a th:text="#{label.denominazione_legale}" th:href="">Denominazione legale</a></th>
 									<th th:text="#{label.codiceFiscaleOrIVA}">Codice fiscale / Partita IVA</th>
 									<th th:text="#{label.gruppo_appartenenza}">Gruppo di appartenenza</th>
 								</tr>
