--- a/src/main/resources/templates/provider/accreditamentoList.html
+++ b/src/main/resources/templates/provider/accreditamentoList.html
@@ -23,7 +23,7 @@
 							cellspacing="0" width="100%">
 							<thead>
 								<tr>
-									<th th:text="#{label.accreditamento_nome}">Nome</th>
+									<th th:text="#{label.accreditamento_tipo}">Tipo</th>
 									<th th:text="#{label.accreditamento_stato}">Stato</th>
 									<th th:text="#{label.accreditamento_invio}">Data invio</th>
 									<th th:text="#{label.accreditamento_validazione}">Datavalidazione</th>
