SedeWrappper testato Ripristinato server smtp

--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -68,6 +68,7 @@
 									<span class="fa fa-chevron-down"></span>
 								</a>
 								<ul class="nav child_menu" style="display: none">
+									<li><a th:href="@{/provider/list}" th:text="#{label.provider}">label.provider</a></li>
 									<li><a th:href="@{/user/list}" th:text="#{label.utenti}">label.utenti</a></li>
 									<li><a th:href="@{/profile/list}" th:text="#{label.profili}">label.profili</a></li>
 								</ul>
