Completato il template di accreditamentoEdit
-aggiunti i file css e js per bootstrap-select
-modificato SecurityConfig.java appositamente
-modificato l'header e il footer per includere i nuovi file
-aggiunta qualche label necessaria al template
-modificato il template accreditamentoEdit preesistente

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -52,6 +52,15 @@
 				
 		<script src="../static/js/main.js"
 				th:src="@{/js/main.js}"></script>	
+				
+		<!-- bootstrap-select -->
+		<script	src="../static/bootstrapSelect/js/bootstrapSelect.min.js"
+			th:src="@{/bootstrapSelect/js/bootstrapSelect.min.js}"></script>
+		
+		<script
+			src="../static/bootstrapSelect/js/bootstrapSelect.js"
+			th:src="@{/bootstrapSelect/js/bootstrapSelect.js}"></script>
+		
 		
 		<!-- initialize the validator.js  --> 		
 		<script th:inline="javascript">
@@ -117,7 +126,6 @@
 				"bFilter" : false			
 			});
 			
-		
 			function sendNotify(){
 				var notify = new PNotify({
 					title: [[${message?.titolo}]],
