--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -32,9 +32,6 @@
 			<script src="../static/gentella/js/jquery.min.js"
 				th:src="@{/gentella/js/jquery.min.js}"></script>
 				
-			<link rel="stylesheet"
-				href="../static/css/main.css"
-				th:href="@{/css/main.css}" />
 			
 		  <link rel="stylesheet"
 		  		href="..static/gentella/js/datatables/jquery.dataTables.min.css"
@@ -58,7 +55,20 @@
 		  		
 		  <link rel="stylesheet" 
 		  		href="..static/gentella/css/switchery/switchery.min.css"
-		  		th:href="@{/gentella/css/switchery/switchery.min.css}" />	
+		  		th:href="@{/gentella/css/switchery/switchery.min.css}" />
+		  		
+		  
+		  	<!-- bootstrap-select -->
+			<link rel="stylesheet"
+				href="..static/bootstrapSelect/css/bootstrapSelect.min.css"
+				th:href="@{/bootstrapSelect/css/bootstrapSelect.min.css}" />
+			
+				
+			<!-- css personalizzato per ECM -->
+			<link rel="stylesheet"
+				href="../static/css/main.css"
+				th:href="@{/css/main.css}" />
+			
 				
 				
 			<!--[if lt IE 9]>
