--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -43,4 +43,26 @@ body.nav-md .container.body .right_col.main{
 	body.nav-md .container.body .right_col.main{
 	margin-left: 0;
 	margin-right: 0;
-	}
+	} 
+}
+
+.dropdown-menu {
+	max-width: 100%;
+	min-width: 100%;	
+}
+
+.dropdown-menu span {
+	max-width: 95%; 
+    overflow: hidden; 
+    text-overflow: ellipsis;
+    display: block;
+   	margin-right: 0 !important; /* TODO: trovare modo per togliere important*/
+}
+
+.form-group .bootstrap-select.btn-group, .form-horizontal .bootstrap-select.btn-group, .form-inline .bootstrap-select.btn-group {
+	margin-bottom: 10px;
+}
+
+
+
+
